--- a/templates/program-head.html
+++ b/templates/program-head.html
@@ -3,10 +3,20 @@
 {# 1. Disable default header #}
 {% block header %}{% endblock %}
 
-{% set pageStyles = ['program-head.css', 'enrollment.css', 'enlistment.css', 'student_journey.css', 'retention.css'] %}
-{% set pageScripts = ['program-head.js', 'enrollment.js', 'enlistment.js', 'student_journey.js', 'retention.js'] %}
+{# 2. Force load Class Records CSS using the extra_css block #}
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/classrecords.css') }}">
+    
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/program-head.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/enrollment.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/enlistment.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/student_journey.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/retention.css') }}">
+{% endblock %}
 
 {% block content %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+
     <aside class="sidebar" id="sidebar">
         <div class="user-profile">
             <i class='bx bx-menu' id="sidebarToggle" style="font-size: 28px; cursor: pointer;"></i>
@@ -22,8 +32,11 @@
             <a href="#" class="nav-item" onclick="switchTab(event, 'enlistment')"><i class='bx bx-file-blank'></i> <span>ENLISTMENT</span></a>
             <a href="#" class="nav-item" onclick="switchTab(event, 'journey')"><i class='bx bx-paper-plane'></i> <span>STUDENT JOURNEY</span></a>
             <a href="#" class="nav-item" onclick="switchTab(event, 'retention')"><i class='bx bx-pulse'></i> <span>RETENTION & ADVISING</span></a>
-            <a href="#" class="nav-item" onclick="switchTab(event, 'records')"><i class='bx bx-folder'></i> <span>CLASS RECORDS</span></a>
-            <a href="#" class="nav-item" onclick="switchTab(event, 'schedule')"><i class='bx bx-calendar-event'></i> <span>SCHEDULE</span></a>
+            
+            {# Link to Class Records Tab #}
+            <a href="#" class="nav-item" onclick="switchTab(event, 'classrecords')"><i class='bx bx-folder'></i> <span>CLASS RECORDS</span></a>
+            
+            <a href="#" class="nav-item" onclick="switchTab(event, 'schedules')"><i class='bx bx-calendar-event'></i> <span>SCHEDULE</span></a>
             <a href="#" class="nav-item" onclick="switchTab(event, 'instructors')"><i class='bx bx-group'></i> <span>INSTRUCTORS</span></a>
         </nav>
 
@@ -137,8 +150,20 @@
             <div id="journey-view" style="display:none;">{% include 'includes/program-head/student_journey.html' %}</div>
             <div id="retention-view" style="display:none;">{% include 'includes/program-head/retention.html' %}</div>
             <div id="advising-view" style="display:none;">{% include 'includes/program-head/advising.html' %}</div>
+            
             <div id="classrecords-view" style="display:none;">{% include 'includes/program-head/classrecords.html' %}</div>
+            
             <div id="schedules-view" style="display:none;">{% include 'includes/program-head/schedules.html' %}</div>
         </main>
     </div>
+{% endblock %}
+
+{# 3. Force load Scripts using the extra_js block #}
+{% block extra_js %}
+    <script src="{{ url_for('static', filename='js/program-head.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/enrollment.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/enlistment.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/student_journey.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/retention.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/classrecords.js') }}"></script>
 {% endblock %}
