Changes to be committed: 	modified:   static/css/faculty.css 	modified:   templates/includes/faculty/classrecords.html

--- a/templates/includes/faculty/classrecords.html
+++ b/templates/includes/faculty/classrecords.html
@@ -1,7 +1,7 @@
 <div id="classrecords" class="content-section" style="display: none;">
     
     <div class="cr-module-header">
-        <h3>CLASS RECORDS (FACULTY VIEW)</h3>
+        <h3>CLASS RECORDS</h3>
     </div>
 
     <div class="cr-body-container">
@@ -58,7 +58,7 @@
                     <button class="btn-tool"><i class='bx bx-filter'></i> Filter</button>
                     <button class="btn-tool dark"><i class='bx bx-import'></i> Import</button>
                     <button class="btn-tool"><i class='bx bx-export'></i> Export</button>
-                    <button class="btn-tool red"><i class='bx bx-send'></i> Submit for Approval</button>
+                    <button class="btn-tool red"><i class='bx bx-send'></i> Send for Approval</button>
                 </div>
             </div>
 
