--- a/static/css/faculty.css
+++ b/static/css/faculty.css
@@ -135,7 +135,7 @@ html, body {
     flex: 1;
     display: flex;
     flex-direction: column;
-    overflow: hidden; /* Prevent page scroll */
+    overflow-y: auto; /* Prevent page scroll */
     height: 100%;     /* Force full available height */
     box-sizing: border-box;
 }
