On branch main  Changes to be committed: 	modified:   static/css/faculty.css

--- a/static/css/faculty.css
+++ b/static/css/faculty.css
@@ -142,7 +142,8 @@ html, body {
 
 /* Ensure the component fills the wrapper */
 #classrecords {
-    height: 100%;
+    min-height: 100%;   /* <--- CHANGE TO THIS */
+    height: auto;       /* Let it grow vertically */
     display: flex;
     flex-direction: column;
 }
