On branch main  Your branch is up to date with 'origin/main'.  Changes to be committed: 	modified:   __pycache__/config.cpython-314.pyc 	new file:   __pycache__/models.cpython-314.pyc 	modified:   app.py 	modified:   config.py 	new file:   models.py 	modified:   static/js/enrollment.js 	modified:   templates/includes/program-head/enrollment.html

--- a/templates/includes/program-head/enrollment.html
+++ b/templates/includes/program-head/enrollment.html
@@ -143,6 +143,7 @@
                     <p id="detected-columns-text">None</p>
                 </div>
                 <div class="mapping-grid">
+                    <div class="map-item"><div class="map-label"><i class='bx bx-check-circle'></i> Student ID</div><select class="map-select" data-key="student_id"></select></div>
                     <div class="map-item"><div class="map-label"><i class='bx bx-check-circle'></i> First Name</div><select class="map-select" data-key="firstname"></select></div>
                     <div class="map-item"><div class="map-label"><i class='bx bx-check-circle'></i> Last Name</div><select class="map-select" data-key="lastname"></select></div>
                     <div class="map-item"><div class="map-label"><i class='bx bx-check-circle'></i> Middle Name (optional)</div><select class="map-select" data-key="middlename"></select></div>
